tests/NormalTests/paczka1/fuzzy1/42874072.err
Error in line 17: ylIdwYMgL AU44 233,4
Error in line 15: bqlE A963 94,8
Error in line 20: kQeT9 S311 36,1
Error in line 10: S829 A944 34,9
Error in line 13: hWDY A963 48,0
Error in line 21: kQeT9 A963 20,5
Error in line 28: kQeT9 S829 53,4
Error in line 19: bqlE S311 69,6
